--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .ipynb_checkpoints
 .DS_Store
+IBM_ML0101EN/data/README.txt
+IBM_ML0101EN/data/links.csv
+IBM_ML0101EN/data/movies.csv
+IBM_ML0101EN/data/ratings.csv
+IBM_ML0101EN/data/tags.csv
+
